desktop overflow fixed

--- a/css/TeamInventoryAssessment.css
+++ b/css/TeamInventoryAssessment.css
@@ -86,8 +86,12 @@
 .thankyou-container-top{
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
     /* justify-content: center; */
     /* padding: 1rem 1.25rem; */
+}
+.overflow-wraper{
+    overflow-y: scroll;
 }
 .thankyou-body-container{
     display:flex;
@@ -344,7 +348,6 @@
 
 
 .nav-container{
-    height: 8vh;
     width: 100vw;
     background-color: white;
     display: flex;
